Update pipeline E2E code to fit Java 17 (#37906)
* Replace collect(Collectors.toList()) to toList()

* Replace to text block

* Replace to enhanced switch

* Replace to String.repeat

* Replace deprecated commons-lang3 RandomUtils